--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.3.3.jar=E:\\Downloaded Programs\\jcalendar-1.3.3\\lib\\jcalendar-1.3.3.jar
 file.reference.jxl.jar=E:\\Downloaded Programs\\jexcelapi_2_6_12\\jexcelapi\\jxl.jar
+file.reference.miglayout-4.0-swing.jar=E:\\Downloaded Programs\\miglayout-4.0-swing.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jxl.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.miglayout-4.0-swing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ReportGenerator
+main.class=ReportGenerator2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
